# Practical-Rust-Projects

./: .gitignore  LICENSE  README.md
cat-breeds-k-means/: Cargo.toml
cat_volleyball/src/: main.rs
catdex-api/: Cargo.toml  cert.pem  key-no-password.pem  key.pem
catdex-api/src/: errors.rs  main.rs  model.rs
catdex-api/static/: cat.html  index.html
catdex-yew/: Cargo.toml
catdex-yew/src/: index.css  main.rs
catsay/: Cargo.toml  catfile.txt
catsay-gui-glade/: layout.glade
catsay-gui-glade/src/: main.rs
catsay-gui/src/: main.rs
catsay-tui/src/: main.rs
catsay/src/: main.rs
catsay/tests/: integration_test.rs
hello-wasm/: Cargo.toml
hello-wasm/client/: package-lock.json
hello-yew-world/src/: main.rs
wasm-image-processing/: Cargo.toml  LICENSE_MIT
wasm-image-processing/client/: index.html  index.js  package-lock.json  package.json
wasm-image-processing/src/: lib.rs
